--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -608,3 +608,47 @@ input.item-count__el
 
 //.item-footer__get--active
 
+.card-img
+	padding: 25% 10%
+	bg-full()
+
+.book-row__title
+	display table-cell
+	white-space nowrap
+	color black
+	font-weight: 500
+.book-row__dot
+	display table-cell
+	border-bottom 1px dashed #e9e9e9
+	width 100%
+.book-row__value
+	display table-cell
+	color black
+.item-card-weight
+	display: inline-block
+	margin-left: 5px
+	font-size: 10px
+
+.card-count
+	flex(mid)
+	input
+		background: white
+		border-radius 8px
+		border 1px solid $snow
+		size 32px
+		color #999999
+
+.card-order
+	flex(between)
+	margin-bottom: 40px
+	width: 100%
+
+.card-price
+	font-size: 32px
+	font-weight:500
+	color black
+
+.card-get
+	@extend .btn--md
+	@extend .btn--mark
+	color white!important
