--- a/app/css/_wgt.styl
+++ b/app/css/_wgt.styl
@@ -27,7 +27,7 @@
 		box-shadow: 0 16px 24px rgba(0, 0, 0, 0.16);
 		border-radius 10px
 	.lsp-popup-cross
-		background: url("/img/close-fat.svg") no-repeat center center transparent;
+		background: url("../img/close-fat.svg") no-repeat center center transparent;
 		width: 19px;
 		height: 19px;
 		position: absolute;
@@ -97,6 +97,7 @@
 
 .item-param
 	margin-top: auto
+	//display: none
 	fieldset
 		padding: 0
 		margin: 0
@@ -124,3 +125,107 @@
 		background: #ebebf2
 		tr(all)
 
+.page-toppings
+	fieldset
+		padding: 0
+		margin: 0
+		border 0
+	legend
+		display: none
+.card-descr
+	padding: 30px
+//карточка подробная
+#lsp-block-popup[data-page='show_item']
+	.lsp-popup-cont
+		left initial
+		right 0
+		transform translateX(0)
+		height: 100vh
+		border-radius 0
+		margin-top: -15px
+		padding: 0 0 30px 0
+		width: 600px
+	.lsp-popup-cross
+		top 15px
+		right: 640px
+	fieldset
+		padding: 0
+		margin: 0
+		border 0
+	legend
+		display: none
+	.lsp-js-type-modifer-group-items
+		f()
+		width: 100%
+		border 1px solid $border-color
+		border-radius 10px
+		overflow: hidden
+	.lsp-type-modifier-item
+		flex-grow 1
+		text-align: center
+		&:hover
+			cursor pointer
+	.lsp-button
+		padding: 15px 10px
+		display: inline-block
+		width: 100%
+		&:hover
+			background: #fbfbfc
+	.lsp-button-red
+		background: #ebebf2
+		tr(all)
+.card-title
+	font-size: 28px
+	font-weight:700
+	color black
+	margin-bottom: 20px
+.card-text
+	line-height: 1.6
+	margin-bottom: 20px
+
+.card-compound
+	margin-bottom: 40px
+	.book-row
+		margin-bottom: 10px
+
+.card-modificators
+	margin-bottom: 40px
+
+.card-modifiers
+	padding: 30px
+	margin-left: -30px
+	width calc(100% + 60px)
+	background: #f8f8f8
+	em
+		font-style initial
+	.lsp-modifier-item
+		flex(between)
+		width: 100%
+		margin-bottom: 10px
+	.lsp-button-minus,.lsp-button-plus
+		size 30px
+		border 1px solid $border-color
+		background: white
+		display: inline-block
+		flex(mid)
+		cp()
+		font-style initial
+	.lsp-modifier-amont-c
+		display: block
+		flex(between)
+		width: 140px
+		margin: 0 20px
+	.lsp-modifier-price-c
+		width: 20%
+	.lsp-modifier-summ-c
+		width: 30%
+	.lsp-modifer-desc
+
+		f()
+		align-items: center
+		width: 50%
+	.lsp-modifier-name-c
+		width: 45%
+	.lsp-modifier-name
+		color black
+		font-weight: 500
