--- a/app/css/variable/config/_typography.styl
+++ b/app/css/variable/config/_typography.styl
@@ -48,14 +48,19 @@ typeSize(fontSm,font)
 
 h1
 	@extend .type--xxl
+	color black
 h2
 	@extend .type--xl
+	color black
 h3
 	@extend .type--lgx
+	color black
 h4
 	@extend .type--lg
+	color black
 h5
 	@extend .type--md
+	color black
 
 a
 	color $link-color
