--- a/app/css/_wgt.styl
+++ b/app/css/_wgt.styl
@@ -1,5 +1,14 @@
 //popups
 #lsp-block-popup
+	position: absolute
+	width: 100%
+	height: 100vh
+	top 0
+	left 0
+	z-index 1000
+	overflow-y scroll
+	min-height 200px
+	padding: 50px 0
 	.lsp-popup-placeholder
 		background: $dark
 		width: 100%;
@@ -133,21 +142,38 @@
 	legend
 		display: none
 .card-descr
-	padding: 30px
+
+	padding: 30px 30px 0 30px
 //карточка подробная
 #lsp-block-popup[data-page='show_item']
+	position: relative
+
 	.lsp-popup-cont
 		left initial
 		right 0
+		top: 0!important
 		transform translateX(0)
 		height: 100vh
 		border-radius 0
-		margin-top: -15px
-		padding: 0 0 30px 0
+		padding: 0
 		width: 600px
-	.lsp-popup-cross
+		position: fixed
+		overflow-y auto
+		&::-webkit-scrollbar
+			-webkit-appearance: none
+			width: 4px
+		&::-webkit-scrollbar-thumb
+			border-radius: 4px
+			background-color: #aaaaaa
+/*	.lsp-popup-cross
 		top 15px
-		right: 640px
+		left 15px
+		position: fixed !important
+		size 30px
+		flex(mid)
+		round()
+		background-color: $red
+		background-size: 10px*/
 	fieldset
 		padding: 0
 		margin: 0
@@ -160,6 +186,7 @@
 		border 1px solid $border-color
 		border-radius 10px
 		overflow: hidden
+		overflow-y scroll
 	.lsp-type-modifier-item
 		flex-grow 1
 		text-align: center
@@ -192,10 +219,11 @@
 	margin-bottom: 40px
 
 .card-modifiers
-	padding: 30px
-	margin-left: -30px
-	width calc(100% + 60px)
-	background: #f8f8f8
+	.lsp-modifiers-container
+		padding: 30px
+		margin-left: -30px
+		width calc(100% + 60px)
+		background: #f8f8f8
 	em
 		font-style initial
 	.lsp-modifier-item
@@ -229,3 +257,203 @@
 	.lsp-modifier-name
 		color black
 		font-weight: 500
+.cart-inner
+	position: absolute
+	top: 100%
+	z-index 100
+	background: white
+	width: 300px
+	right 0
+	color black
+	padding: 20px 5px 0 0
+	display: none
+	border-radius 10px 0 10px 10px
+	.lsp-block-cart-item
+		padding:20px
+		border-bottom 1px solid $border-color
+
+.cart-open
+	.cart-inner
+		display: block
+	.cart
+		z-index 1010
+		border-radius 12px 12px 0 0
+		&:hover
+			background: $red!important
+	.shrink
+		z-index 1010
+		.cart-inner
+			border-radius 0 0 10px 10px
+.cart-item
+	text-transform: none
+	text-align: left
+
+.cart-item__incr
+	flex(mid)
+	input
+		background: white
+		border-radius 8px
+		border 1px solid $snow
+		size 32px
+		color #999999
+		text-align: center
+		outline none!important
+.cart-item__incr-total
+	border 0!important
+	text-align: center
+
+.cart-item__footer
+	flex(between)
+
+.cart-item__info
+	margin-bottom: 20px
+	f()
+	align-items: center
+.cart-item__name
+	@extend .type--md
+	font-weight 500
+	margin-right: 3px
+	display: inline
+	width: calc(100% - 100px)
+.cart-item__name--add
+	font-weight: 300
+.cart-item__price
+	@extend .type--md
+	font-weight: 500
+	color black
+
+.cart-summary
+	flex(between)
+	padding: 20px
+
+.cart-total
+	@extend .type--lg
+	font-weight 600
+
+.cart-get
+	@extend .btn--md
+	@extend .btn--mark
+	width: 130px
+	padding: 20px 10px
+
+.cart-min
+	text-transform: none
+	opacity: .55
+	font-size: 14px
+	padding-bottom: 20px
+.cart-list
+	max-height 330px
+	overflow-y auto
+	&::-webkit-scrollbar
+		-webkit-appearance: none
+		width: 4px
+	&::-webkit-scrollbar-thumb
+		border-radius: 4px
+		background-color: #aaaaaa
+
+.cart-empty
+	flex(mid)
+	fl()
+	padding: 40px 0
+.cart-empty__icon
+	.icon
+		size 64px
+		fill $red
+		opacity: .6
+		margin-bottom: 20px
+.cart-empty__text
+	font-weight: 700
+	text-transform: uppercase
+
+.header-menu__basket
+	position: relative
+
+.cart-item__img
+	bg-full()
+	padding: 12% 10%
+	size 60px
+	margin-right: 30px
+
+
+//order form
+.label-row-text
+	display: none!important
+#lsp-block-order-form
+	width: 65%
+	input[type=radio]
+		background: #fff
+		border-radius: 50%
+		size 30px
+		color: #000
+		font-size: 15px
+		box-shadow: 0 0 0px 1px #d0cbcb
+		border: 11px solid #fff
+		-webkit-appearance: none
+		display: inline-block
+		margin-right: 15px
+		vertical-align: middle
+		padding: 0
+		&:checked
+			border:7px solid #fff
+			background $red
+			box-shadow: 0 0 0 1px $red
+	.lsp-js-form-field-delivery_type
+		input[type=radio]
+			display: none!important
+	.label-row-field
+		display: block
+	.lsp-order-paymenttype-label
+		f()
+		align-items: center
+		margin-bottom: 20px
+	.lsp-js-delivery-type-cont-delivery
+		f()
+		fw()
+		justify-content: space-between
+	.label-row-text
+		display: none
+	.lsp-js-form-field-delivery_city
+		width: 100%
+	.lsp-js-form-field-delivery_street
+		width: 100%
+	.lsp-js-form-field-delivery_date
+		width: 100%
+	.label-row.label-row-half
+		width: 32%
+	.lsp-js-form-field-message
+		textarea
+			@extend .input
+			width: 100%
+	.lsp-order-paymenttype-variant-CASH
+		flex(between)
+		.lsp-order-paymenttype-variant-fields
+			width: 50%
+	.lsp-js-form-field-delivery_type
+		.full-row
+			f()
+			input:checked + span
+				border-bottom:3px solid $red
+				color:#000
+			span
+				font-size:15px
+				text-transform:uppercase
+				color:#a3a3a3
+				border-bottom:3px solid #e0d9d2
+				display:block
+				text-align:center
+				padding: 20px 10px
+			label
+				width:50%
+				padding:0
+				display:inline-block
+				margin-bottom:20px
+				cursor:pointer
+.lsp-js-form-field-userAgreement
+	.label-row-field
+		input[type=checkbox]
+			width 30px!important
+			display: inline-block!important
+			margin-bottom: -2px
+			transform: translateY(3px)
+
+//order form===end
