--- a/app/module/footer/_footer.pug
+++ b/app/module/footer/_footer.pug
@@ -19,7 +19,7 @@ mixin footer()
 							+icon("pizza","icon")
 			.footer-info
 				.footer-info__about
-					.footer-logo
+					a(href="/").footer-logo
 						img(src="img/logo.svg", alt="")
 					.footer-copy Jstore © 2018
 				.footer-menu
