--- a/app/css/_wgt.styl
+++ b/app/css/_wgt.styl
@@ -1,6 +1,6 @@
 //popups
 #lsp-block-popup
-	position: absolute
+	position: fixed
 	width: 100%
 	height: 100vh
 	top 0
@@ -9,6 +9,7 @@
 	overflow-y scroll
 	min-height 200px
 	padding: 50px 0
+	background: rgba(57, 63, 78, 0.81)
 	.lsp-popup-placeholder
 		background: $dark
 		width: 100%;
@@ -19,6 +20,7 @@
 		z-index: 999;
 		cursor: pointer;
 		opacity: .8
+		display: none
 	h1
 		@extend .type--xl
 		color black
@@ -28,7 +30,7 @@
 		+below(640px)
 			width: 100%
 		position: absolute;
-		top: 150px;
+		top: 150px!important;
 		width: 450px
 		background: #FFF;
 		z-index: 1000;
@@ -37,6 +39,7 @@
 		padding: 30px 20px
 		box-shadow: 0 16px 24px rgba(0, 0, 0, 0.16);
 		border-radius 10px
+		margin-bottom: 100px
 	.lsp-popup-cross
 		+below(640px)
 			background-color: white
@@ -297,20 +300,21 @@
 		font-weight: 500
 .cart-inner
 	+below(640px)
-		width: 100%
+		width: 100vw
 		position: fixed
 		top 50px
 		border-top 1px solid $border-color
-		max-height calc(100vh - 50px)
 		padding: 0
+		background: white
 	position: absolute
 	top: 100%
 	z-index 100
 	background: white
-	width: 300px
+	width: 600px
 	right 0
 	color black
-	padding: 20px 5px 0 0
+	//padding: 20px 5px 0 0
+	padding: 0 5px 0 0
 	display: none
 	border-radius 10px 0 10px 10px
 	.lsp-block-cart-item
@@ -391,12 +395,18 @@
 
 .cart-min
 	text-transform: none
-	opacity: .55
 	font-size: 14px
-	padding-bottom: 20px
 	font-weight: 300
+	background: #f3f3f3
+	width: calc(100% + 5px)
+	margin-right: -5px
+	padding: 10px 0
+	//border-radius 0 0 10px 10px
+	color #bbbbbb
 .cart-list
-	max-height 330px
+	+below(640px)
+		max-height calc(100vh - 210px)
+	max-height 500px
 	overflow-y auto
 	&::-webkit-scrollbar
 		-webkit-appearance: none
@@ -518,12 +528,22 @@
 		display: inline-block!important
 		transform: translateY(2px)
 
+.lsp-block-register
+	input[type=checkbox]
+		width 30px!important
+		display: inline-block!important
+		transform: translateY(2px)
 
+	.label-row-field
+		f()
+		fw()
 
 
 //order form===end
 
-
+.cart-order__item
+	.cart-order
+		display: none
 .container--order
 	+below(768px)
 		fw()
@@ -534,6 +554,8 @@
 			width: 100%
 			margin-bottom: 20px
 		width: 65%
+	.cart-order
+		display: block
 
 .order-container
 	+below(768px)
@@ -589,3 +611,18 @@
 
 .cart-order__info
 	padding-top: 5px
+
+.lsp-order-status-title
+	font-size: 20px
+
+.lsp-button-red
+	@extend .btn--md
+	text-decoration: none!important
+
+.lsp-block-personal
+	.lsp-button
+		@extend .btn--sm
+		@extend .btn--mark
+		text-decoration: none!important
+		display: inline-block!important
+		width: auto
