--- a/app/html/block_html/_style.pug
+++ b/app/html/block_html/_style.pug
@@ -21,6 +21,7 @@
 		link(rel="stylesheet", href="bower/slick-carousel/slick/slick.css")
 		link(rel="stylesheet", href="bower/slick-carousel/slick/slick-theme.css")
 		link(rel="stylesheet", href="bower/jquery-nice-select/css/nice-select.css")
+		link(rel="stylesheet", href="css/jquery.datetimepicker.min.css")
 		//endbuild
 
 		//link(rel="stylesheet", href="//deliveryWiget.iiko.ru/v2_0/assets/css/style.css" )
