--- a/app/html/main.pug
+++ b/app/html/main.pug
@@ -21,10 +21,11 @@ include block_html/_include.pug
 	.main-cont
 		//toggle class .items--three .items--four .items--five
 		.container
+
 			.item-container.items--four
 				#jstore-css
 					#lsp-block-content.lsp-block-content
-			#lsp-block-cart.lsp-block-cart.order-container(data-template="order-cart-order-template"  data-page="order" )
+			#lsp-block-cart.lsp-block-cart.order-container.cart-order__item(data-template="order-cart-order-template"  data-page="order" )
 				//#lsp-block-tree.lsp-block-menu-tree
 
 +footer()
