--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -710,10 +710,10 @@ input.item-count__el
 	left 0
 	opacity: .9
 
-.body--fix
+/*.body--fix
 	overflow hidden
 	overflowY hidden
-	height: 100%
+	height: 100%*/
 //.item-footer__get--active
 
 .card-img
